--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -87,7 +87,7 @@
   font-weight: 500;
   text-decoration: underline;
   margin-top: 6px;
-  display: inline-block;
+  display: block;
 }
 
 .task-link:hover {
